# PiCV

./: .gitignore  CMakeLists.txt  cmake.sh  index.md  install.sh  make.sh  mc.sh  run.sh
PiCV/: CMakeLists.txt  PiCV.cpp  PiCV.hpp  _PiCV.cpp  _PiCV.hpp  ctypes.cpp  ctypes.hpp
PiCV.xcodeproj/: project.pbxproj
PiCV.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PiCV.xcodeproj/xcuserdata/zhongsifen.xcuserdatad/xcschemes/: xcschememanagement.plist
PiDL/: CMakeLists.txt  PiDL.cpp  PiDL.hpp  PiDLConfig.hpp  _PiDL.cpp  _PiDL.hpp  dlib_cv.hpp
PiKV/: PiCam.py  PiMien.kv  PiMien.py  drawingspace.kv  menubar.kv
appPiCV/: CMakeLists.txt  Cam.kv  Cam.py  PiCV_.kv  main.cpp  main.py
appPiDL/: CMakeLists.txt  main.cpp  main.py
ctpPiCV/: PiCV.py  PiDL.py
docs/: index.md
opencv/: CMakeCache.txt  cmake.sh  make.sh  xcodemake.sh
